# YunYin

./: .gitignore  README.md  clearDefault.css  components.d.ts  data.json  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  data.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/iconfont/: iconfont.css
src/assets/themes/css/: dark-hc.css  dark-mc.css  dark.css  light-hc.css  light-mc.css  light.css
src/components/: AudioControl.vue  AudioControlTest.vue  Home.vue
src/hooks/: useConfirmDialog.ts  useGetAudiosUrl.ts  useGetDriveID.ts  useGetLrcUrl.ts  useGetMusicLibrary.ts  usePlaybackMode.ts  useSaveTo.ts  useSetThemeColor.ts
src/router/: index.ts
src/store/: audio.ts  playList.ts  randomPlaylist.ts  token.ts  tokenTest.ts
src/views/: AudioView.vue  AudioViewTest.vue  DataSync.vue  Login.vue  MusicLibrary.vue  MusicLibraryTest.vue  PlayList.vue  Setting.vue  Test.vue  playListTest.vue
src/views/SettingViews/: ThemeColor.vue
