[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
#name = "app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.7", features = ["devtools"] }  # 更新为2.7版本
tauri-plugin-opener = "2.3.0"  # 确保插件版本兼容
tauri-plugin-localhost = "2.3.0"  # 确保插件版本兼容
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
